# Blog_beer_BLR

./: .dockerignore  .gitignore  Dockerfile  README  db.sqlite3  pyproject.toml
Blog/: celery.py  settings.py  urls.py
Folklore/: admin.py  forms.py  models.py  urls_folklore.py  views.py
Folklore/migrations/: 0001_initial.py
Menu/: models.py  view.py
Menu/migrations/: 0001_initial.py
Talks/: admin.py  forms.py  models.py  tg_notifier.py  urls_talks.py  views.py
Talks/api/: permissions.py  serializers.py  urls_api.py  views.py
Talks/migrations/: 0001_initial.py  0002_initial.py
Talks/tests/: test_API_talks.py  test_API_token.py
beer_BLR/: admin.py  apps.py  forms.py  models.py  tasks.py  urls_blog.py  views.py
beer_BLR/api/: permissions.py  serializers.py  urls_api.py  views.py
beer_BLR/migrations/: 0001_initial.py  0002_alter_experience_photo_alter_news_photo_and_more.py  0003_remove_experience_profile_picture.py  0004_alter_technology_photo.py  0005_alter_technology_photo.py  0006_alter_experience_photo.py  0007_alter_about_insta.py  0008_alter_news_photo_alter_recipes_photo_and_more.py
beer_BLR/tests/: test_API_experience.py  test_API_talks.py  test_API_technology.py  test_API_token.py  test_token.py
run/: backend.sh  celery.sh
templates/Folklore/: base.html  comment_add.html  folklore_show.html  home.html  show_category.html
templates/Menu/: Menu.html  base.html
templates/Talks/: base.html  category_show_talks.html  edit_talk.html  message_add.html  talk_create.html  (+2 more)
users/: admin.py  email.py  forms.py  models.py  urls_user.py  views.py
(+22 files in other folders)
